# aacmp4

./: CMakeLists.txt  README.md  library.json
examples/: CMakeLists.txt  aacmp4test.cpp
src/: aacmp4.hpp  aacmp4test.cpp  primitive_types.hpp  stream_adapter.hpp
